--- a/anime-detail.html
+++ b/anime-detail.html
@@ -3739,7 +3739,40 @@
           }
         ]
       },
-
+      64: {
+        title: "Gnosia",
+        desc: "Cuando un enemigo cambiaformas conocido como Gnosia se infiltra en una nave espacial solitaria, la tripulación solo tiene una forma de sobrevivir: identificar al impostor cada día y ponerlo en criosueño. Pero para Yuri, el día nunca termina. Atrapada en un bucle temporal, revive el primer día de la crisis una y otra vez. Para escapar, Yuri debe descubrir la verdad tras Gnosia y el propio bucle temporal, antes de que sea demasiado tarde.",
+        cover: "gnosiap.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "gnosia1.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+              { title: "Capítulo 16"},
+              { title: "Capítulo 17"},
+              { title: "Capítulo 18"},
+              { title: "Capítulo 19"},
+              { title: "Capítulo 20"},
+              { title: "Capítulo 21"},
+            ]
+          }
+        ]
+      },
 
 
 
