--- a/anime-detail.html
+++ b/anime-detail.html
@@ -3214,13 +3214,30 @@
             num: 1,
             cover: "https://www.dropbox.com/scl/fi/1acwpuwtsx2f20urv44eo/Airbrush-IMAGE-ENHANCER-1763730194883-1763730194884.jpg?rlkey=ornue772yaoazcagrsinqj1fc&st=nlz517kl&raw=1",
             eps: [
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 1"},
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 2"},
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 3"},
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 4"},
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 5"},
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 6"},
-              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 7"},
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+              { title: "Capítulo 16"},
+              { title: "Capítulo 17"},
+              { title: "Capítulo 18"},
+              { title: "Capítulo 19"},
+              { title: "Capítulo 20"},
+              { title: "Capítulo 21"},
+              { title: "Capítulo 22"},
+              { title: "Capítulo 23"},
+              { title: "Capítulo 24"},
             ]
           }
         ]
