--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
       {id:62, title:"Record of Ragnarok", aliases: ["Shūmatsu no Valkyrie"], img:"recordpor.avif", rating:4.7, genres:["Acción","Fantasía","Sobrenatural","Drama","Mitología","Survival","Seinen"]},
       {id:63, title:"Genshin Impact Hentai", aliases: ["Hentai"], img:"gih.avif", rating:5, genres:["Hentai","Fantasía","Tentáculos","Seijin"]},
       {id:64, title:"Gnosia", img:"gnosiap.avif", rating:4.4, genres:["Ciencia ficción","Drama","Misterio","Thriller","Deducción Social","RPG","Seinen"]},
+      {id:65, title:"Classroom of the Elite", aliases: ["Yōkoso Jitsuryoku Shijō Shugi no Kyōshitsu e"], img:"classroomelite.avif", rating:4.8, genres:["Drama","Slice of Life","Survival Game","Thriller","Thriller psicológico","Escolar","Seinen"]},
     ];
 
     /* ----------------------------
