--- a/anime-detail.html
+++ b/anime-detail.html
@@ -238,8 +238,11 @@
   <audio id="akujiki-ost" loop><source src="akujiki.mp3" type="audio/mpeg"></audio>
   <audio id="saigonihitotsu-ost" loop><source src="saigonihitotsu.mp3" type="audio/mpeg"></audio>
   <audio id="syn-ost" loop><source src="syn.mp3" type="audio/mpeg"></audio>
+  <audio id="syn2-ost" loop><source src="syn2.mp3" type="audio/mpeg"></audio>
   <audio id="record-ost" loop><source src="record.mp3" type="audio/mpeg"></audio>
   <audio id="gih-ost" loop><source src="https://www.dropbox.com/scl/fi/ks7rvqfmw6lnyisdz07de/dfgdfg.mp3?rlkey=w76qkjl9t2yer2u9xwf8041v8&st=189sbps1&raw=1" type="audio/mpeg"></audio>
+  <audio id="gnosia-ost" loop><source src="gnosia.mp3" type="audio/mpeg"></audio>
+  <audio id="classroomelite-ost" loop><source src="classroomelite.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3790,6 +3793,78 @@
           }
         ]
       },
+      65: {
+        title: "Classroom of the Elite",
+        desc: "Kiyotaka Ayanokouji acaba de entrar en la Academia Tokyo Koudo Ikusei, de la cual se dice que el 100% de sus estudiantes acaban yendo a la universidad o encontrando un buen trabajo. Sin embargo nuestro protagonista acaba en la Clase 1-D, donde la escuela pone a todos los alumnos con problemas. Y lo que es más, cada mes la escuela otorga a los estudiantes puntos por valor de 100.000 yenes, y las clases emplean un sistema por el cual se puede hablar, dormir e incluso molestar a los compañeros durante las clases.",
+        cover: "classroomelite.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "classroomelite1.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "classroomelite2.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          },
+          {
+            num: 3,
+            cover: "classroomelite3.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          },
+          {
+            num: 4,
+            cover: "classroomelite4.avif",
+            eps: [
+              { title: "Próximamente"},
+            ]
+          }
+        ]
+      },
+
+
 
 
 
@@ -4002,9 +4077,11 @@
         58: ['rym-ost'],
         59: ['akujiki-ost'],
         60: ['saigonihitotsu-ost'],
-        61: ['syn-ost'],
+        61: ['syn-ost','syn2-ost'],
         62: ['record-ost'],
         63: ['gih-ost'],
+        64: ['gnosia-ost'],
+        65: ['classroomelite-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
