--- a/anime-detail.html
+++ b/anime-detail.html
@@ -243,6 +243,8 @@
   <audio id="gih-ost" loop><source src="https://www.dropbox.com/scl/fi/ks7rvqfmw6lnyisdz07de/dfgdfg.mp3?rlkey=w76qkjl9t2yer2u9xwf8041v8&st=189sbps1&raw=1" type="audio/mpeg"></audio>
   <audio id="gnosia-ost" loop><source src="gnosia.mp3" type="audio/mpeg"></audio>
   <audio id="classroomelite-ost" loop><source src="classroomelite.mp3" type="audio/mpeg"></audio>
+  <audio id="frieren-ost" loop><source src="frieren.mp3" type="audio/mpeg"></audio>
+  <audio id="sololeveling-ost" loop><source src="sololeveling.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3863,8 +3865,91 @@
           }
         ]
       },
-
-
+      66: {
+        title: "Frieren: Más allá del final del viaje",
+        desc: "Frieren, una maga elfa inmortal, que tras derrotar al Rey Demonio con un grupo de héroes humanos, se da cuenta de que su larga vida le impide valorar el tiempo con sus compañeros mortales, por lo que emprende un nuevo viaje para entender las relaciones humanas y redescubrir el valor de los momentos efímeros antes de que todos a su alrededor desaparezcan, explorando temas de mortalidad, el paso del tiempo y la memoria con una perspectiva madura y reflexiva.",
+        cover: "ff.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "ff1.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+              { title: "Capítulo 16"},
+              { title: "Capítulo 17"},
+              { title: "Capítulo 18"},
+              { title: "Capítulo 19"},
+              { title: "Capítulo 20"},
+              { title: "Capítulo 21"},
+              { title: "Capítulo 22"},
+              { title: "Capítulo 23"},
+              { title: "Capítulo 24"},
+              { title: "Capítulo 25"},
+              { title: "Capítulo 26"},
+              { title: "Capítulo 27"},
+              { title: "Capítulo 28"},
+            ]
+          }
+        ]
+      },
+      67: {
+        title: "Solo leveling",
+        desc: "Sung Jinwoo, el cazador más débil de la humanidad, que recibe una misteriosa habilidad para subir de nivel como si fuera un videojuego tras una experiencia mortal en una mazmorra, lo que le permite volverse increíblemente fuerte y ascender de rango mientras otros cazadores no pueden, protegiendo al mundo de portales interdimensionales y monstruos. ",
+        cover: "sololeveling.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "sololeveling1.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "sololeveling2.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -4082,6 +4167,8 @@
         63: ['gih-ost'],
         64: ['gnosia-ost'],
         65: ['classroomelite-ost'],
+        66: ['frieren-ost'],
+        67: ['sololeveling-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
