--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         <option>Fantasía oscura</option>
         <option>Familiar</option>
         <option>Gag</option>
+        <option>GameLit/LitRPG</option>
         <option>Gore</option>
         <option>Harem</option>
         <option>Hentai</option>
@@ -441,6 +442,8 @@
       {id:63, title:"Genshin Impact Hentai", aliases: ["Hentai"], img:"gih.avif", rating:5, genres:["Hentai","Fantasía","Tentáculos","Seijin"]},
       {id:64, title:"Gnosia", img:"gnosiap.avif", rating:4.4, genres:["Ciencia ficción","Drama","Misterio","Thriller","Deducción Social","RPG","Seinen"]},
       {id:65, title:"Classroom of the Elite", aliases: ["Yōkoso Jitsuryoku Shijō Shugi no Kyōshitsu e"], img:"classroomelite.avif", rating:4.8, genres:["Drama","Slice of Life","Survival Game","Thriller","Thriller psicológico","Escolar","Seinen"]},
+      {id:66, title:"Frieren", aliases: ["Sōsō no Frieren"], img:"ff.avif", rating:4.9, genres:["Fantasía","Aventura","Drama","Shōnen"]},
+      {id:67, title:"Solo leveling", aliases: ["Ore dake Level Up na Ken"], img:"sololeveling.avif", rating:4.9, genres:["Fantasía","Aventura","Acción","GameLit/LitRPG","RPG","Superhéroes","Isekai","Nekketsu","Shōnen"]},
     ];
 
     /* ----------------------------
