--- a/video-player.html
+++ b/video-player.html
@@ -2743,9 +2743,69 @@
           "13": { link:'https://drive.google.com/file/d/1Uo5hAK4uAKGdeQBG5LARPCfrZ9YjkBaP/preview', title:'Classroom of the Elite T1 Cap 13' },
         }
       },
-
-
-
+      "66": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/13Np4CEoeUt-h_eUhxdU7HHx0zbG4yemH/preview', title:'Frieren T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/11r5zXgEGtFnNZtBBh7QZn9qGLRdkcGl8/preview', title:'Frieren T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1M2gCKJLozaaZ_woX5BSCwghT5A4IIFnG/preview', title:'Frieren T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1HXSV_bFX-uC2JZvLEnaVYj5XligjKROA/preview', title:'Frieren T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/16jMPlEB8fFZ8k5OqVCI3ECtZ9EPCc_YL/preview', title:'Frieren T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1lo4ZGP43A7ItHGEBPFg0l8jb3ZmAbjuQ/preview', title:'Frieren T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1krinn03_30GMzq4URvmTx6I-SZhucRBK/preview', title:'Frieren T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/15zqf5LHlQS3TE-CQZAqQAyGbV-n-v3y_/preview', title:'Frieren T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/168DQHyqOxxAwpze6ckmSY_dXSE0eiPzx/preview', title:'Frieren T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1wLVSy7tE_sgEcgbC3ptBTFY-nBrBOBFt/preview', title:'Frieren T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1gXwA8cCuhBfsQmIvt5io_LM08l0An91Y/preview', title:'Frieren T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1HsioY_a1vFuttog-jQWmacFkUKmul1DR/preview', title:'Frieren T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1tBM1AHPO319rQV0b1yICH4BrKl7CZxkk/preview', title:'Frieren T1 Cap 13' },
+          "14": { link:'https://drive.google.com/file/d/18JIU0jl6VV4Grpqo3DxU3CwlTKopvoYi/preview', title:'Frieren T1 Cap 14' },
+          "15": { link:'https://drive.google.com/file/d/1pIiWOon8IpvRbUKUT-EqIB5kXR8PyzdZ/preview', title:'Frieren T1 Cap 15' },
+          "16": { link:'https://drive.google.com/file/d/1V9nOqVT9IvCcM8EUsz42uzhvOf78TWQA/preview', title:'Frieren T1 Cap 16' },
+          "17": { link:'https://drive.google.com/file/d/1xfvxaNtMKxmeZMs5wbz1ZmW7gc9dcFBv/preview', title:'Frieren T1 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/18lxM7ZFgOwSsgpDaLVVly78lR7pkQLbZ/preview', title:'Frieren T1 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1n1iKFPRKqTwsdNJBrsVlwHmr_TynZoDe/preview', title:'Frieren T1 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/1ri7skTlzInJP3cwXzQPp7dG4tnw2Wuzs/preview', title:'Frieren T1 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1NSDEnaLLt6RolOlhKnyPNUiY1GKsvlNZ/preview', title:'Frieren T1 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1vhqg-6RdanhBrS4ip0ZLL6BFAqa93Fa7/preview', title:'Frieren T1 Cap 22' },
+          "23": { link:'https://drive.google.com/file/d/12NHRQNTC7MGuMShkYAy5V1mcpL39u74t/preview', title:'Frieren T1 Cap 23' },
+          "24": { link:'https://drive.google.com/file/d/10_Sf9iachis6Y_Ci1qYx8rUERr8mNGH7/preview', title:'Frieren T1 Cap 24' },
+          "25": { link:'https://drive.google.com/file/d/1sB6qVgqF29D2p7e37cpeIHo4X2tLlacU/preview', title:'Frieren T1 Cap 25' },
+          "26": { link:'https://drive.google.com/file/d/1oS35kcIj269Rwc4xZYmHQ1pJizqrHTFF/preview', title:'Frieren T1 Cap 26' },
+          "27": { link:'https://drive.google.com/file/d/10tT2Ex4SrQO6tPWS2jK3yM8sD2auNjf5/preview', title:'Frieren T1 Cap 27' },
+          "28": { link:'https://drive.google.com/file/d/1C_9fB7oBrzzvE-kre-zyLu3ILGcMoOp6/preview', title:'Frieren T1 Cap 28' },
+        }
+      },
+      "67": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1831tHql76bHG9B8EAY49WksXu0InK6ID/preview', title:'Solo Leveling T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/14kygr2Gv4-PDGBcTleOWZyUYX_eC8Ph4/preview', title:'Solo Leveling T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1FF5z8ZmxiusDa_6Mtbh0r_DKsr4fyYPP/preview', title:'Solo Leveling T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1RK_8XGfV-019m3iioEWl0jZC3RtJYhiU/preview', title:'Solo Leveling T1 Cap 4' },
+          "5": { link:'preview', title:'Solo Leveling T1 Cap 5' },
+          "6": { link:'preview', title:'Solo Leveling T1 Cap 6' },
+          "7": { link:'preview', title:'Solo Leveling T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1SARlMg6h9QxI_E1RlspdluQ2mfNwcu8s/preview', title:'Solo Leveling T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1-T2UY7wHPFQAt7Gz4Hkvb7aTB2kyCXMA/preview', title:'Solo Leveling T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/16iwobqoYldND2yZdrStLuymUS8CvI_fr/preview', title:'Solo Leveling T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/13ngq33m-FGsU2ZIdUkOezrZsW5XxoChC/preview', title:'Solo Leveling T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1zh14T7VK5lYflFw4Czgmo-1yhvynY74G/preview', title:'Solo Leveling T1 Cap 12' },
+        },
+        "2": {
+          "1": { link:'https://drive.google.com/file/d/1NtGKNuwnvmYZIafzwbseqTAiMsKu2qug/preview', title:'Solo Leveling T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1RtOrnoChz92X6M4cg0f-paIvNcolK4o8/preview', title:'Solo Leveling T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1dBwZAvwILYfNblcx9UlzJyAWiL94lqJ5/preview', title:'Solo Leveling T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/15b9arlpzRlltbBC09zvSEPilPxIpxPVM/preview', title:'Solo Leveling T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1wCiVa0-XsX8nvqMvPYhO6uyNdLAo7zMl/preview', title:'Solo Leveling T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1kLFi4sZ_LbdxBp9RKjcYfyZTd1GGpGtk/preview', title:'Solo Leveling T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1OphXlnf-SoXjMQ1_iXyKvL8vsxk5H9Xk/preview', title:'Solo Leveling T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1rdVK8EJuWIOEsYld73_CaBeAszRnmQ8-/preview', title:'Solo Leveling T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1S8uLRmrO2spTFFuL4tcKgYGxIcS2KT6C/preview', title:'Solo Leveling T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1kNXcHYBMDy4cnvJKRlahpDZ6G1qLAUq7/preview', title:'Solo Leveling T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1zvYTFwzdsAkQbI8x5LaBTc1vQX22WyVw/preview', title:'Solo Leveling T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1DBSWdAGsils0s9U2idNQaUCXpfxjpfNa/preview', title:'Solo Leveling T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1ZwQbE7Smw0dyFvzyDpaXPSA3GSMzVSiS/preview', title:'Solo Leveling T1 Cap 13' },
+        }
+      },
 
 
 
@@ -3228,4 +3288,4 @@
 
   </script>
 </body>
-</html>
+</html> 
